# exercicio_final

./: README.md  env.dev  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
nowon/: asgi.py  settings.py  urls.py  wsgi.py
nowonfeed/: apps.py  forms.py  tests.py  views.py
nowonfeed/static/feed/css/: feed.css  login.css  style.css
nowonfeed/static/feed/js/: script.js
nowonfeed/templates/nowonfeed/: feed.html  login.html  register.html
