[tool.poetry]
name = "nowon"
version = "0.1.0"
description = ""
authors = ["piegez <jessicamsampaio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
daphne = "^4.1.2"
whitenoise = "^6.8.2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.10"
gitpython = "^3.1.43"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
